--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,10 +21,11 @@ jobs:
         cache: gradle
 
     - name: build with gradle
+      working-directory: .
       run: |
         echo "开始进行release构建"
         chmod +x gradlew
-        ./gradlew app:assembleRelease
+        ./gradlew assembleRelease
     - name : upload apk
       uses: actions/upload-artifact@master
       if: always()
