--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,22 +13,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
 
-    - name: build with gradle
+    - name: Grant execute permission for Gradle wrapper
       working-directory: .
-      run: |
-        echo "开始进行release构建"
-        chmod +x gradlew
-        ./gradlew assembleRelease
-    - name : upload apk
-      uses: actions/upload-artifact@master
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      working-directory: .
+      run: ./gradlew assembleRelease --no-daemon
+
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: rstp_apk
-        path: ${{ github.workspace }}/app/build/outputs/apk/release
+        name: rtsp-viewer-apk
+        path: app/build/outputs/apk/release
