--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+# Increase Gradle memory to prevent OutOfMemoryError
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.daemon=true
