--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,7 +39,7 @@ jobs:
         path: app/build/outputs/apk/release
 
     - name: Create Release and Upload Release Asset
-    - uses: ncipollo/release-action@v1
+      uses: ncipollo/release-action@v1
       with:
           artifacts: "*.apk"
           token: ${{ github.token }}
